added about html and css (not finished).

--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
         <div id="page_logo">Logo</div>
         <div id="navigation">
             <a href="home.html">Home</a>
-            <a href="">About</a>
+            <a href="about.html">About</a>
             <a href="">Contact</a>
         </div>
     </nav>
