updated contact page.

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="stylesheet/navbar.css">
-    <link rel="stylesheet" href="stylesheet/about.css">
+    <link rel="stylesheet" href="stylesheet/contact.css">
 </head>
 <body>
     <nav>
@@ -27,9 +27,11 @@
             <div id="chat_container">
                 <div id="chat">
                 </div>
-                <form action="" method="POST"></form>
-                <textarea id="message" name="message">
-                <input type="submit" value="Send">
+                
+                <form action="" method="POST">
+                    <textarea id="message" name="message"></textarea>
+                    <input type="submit" value="Send">
+                </form>
             </div>
         </div>
     </main>
