Humana ang layout sa contact. Kulang message message. Ug responsive sa every page.

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                 
                 <form action="" method="POST">
                     <textarea id="message" name="message"></textarea>
-                    <input type="submit" value="Send">
+                    <input id="send_btn" type="submit" value="Send">
                 </form>
             </div>
         </div>
