--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
         <div id="navigation">
             <a href="home.html">Home</a>
             <a href="about.html">About</a>
-            <a href="">Contact</a>
+            <a href="contact.html">Contact</a>
         </div>
     </nav>
     
