--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div id="page_logo" onclick="window.location.href='home.html'">logo</div>
         <div id="navigation">
             <a href="home.html">Home</a>
-            <a href="">About</a>
-            <a href="">Contact</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
         </div>
     </nav>
     <main>
