Changed Landing page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Bank Savings</title>
     <link rel="stylesheet" href="stylesheet/navbar.css"/>
     <link rel="stylesheet" href="stylesheet/index.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 <body>
     <nav>
@@ -18,12 +19,12 @@
     </nav>
     <main>
         <div id="text_div">
-            <h1 id="title">Text</h1>
-            <p id="description">Video provides a powerful way to help you prove your point. When you click Online Video, you can paste in the embed code for the video you want to add. You can also type a keyword to search online for the video that best fits your document.</p>
+            <h1 id="title">Welcome to Bank Saving</h1>
+            <p id="description">Are you prepared to take charge of your financial destiny and surpass your previous savings goals? There is no need to look any further than Bank Saving, your ideal ally on the road to financial success.</p>
             <a href="home.html"><button>Continue</button></a>
         </div>
         <div id="image_div">
-            <img id="image" src="images/genshin.jpg" alt="genshin">
+            <img id="image" src="images/landing page image-01-01.png" alt="genshin">
         </div>
     </main>
 </body>
