Almost done sa about page. Need new navbar kay bati kung mo scroll down

--- a/about.html
+++ b/about.html
@@ -18,33 +18,33 @@
     </nav>
     <main>
         <div id="ceo_section">
-            <img class="ceo_image" src="/images/4.jpg" alt="CEO Image">
+            <img class="ceo_image" src="/images/programmer.png" alt="CEO Image">
             <div class="ceo_info_container">
-                <h2 class="ceo_name">Name Here</h2>
-                <div class="members_info">
+                <h2 class="ceo_name">Bryan Antier</h2>
+                <div class="ceo_info">
                     <p>Position: <b class="info">Helicopter</b></p>
                 </div>
             </div>
         </div>
-        <div class="grid_container">
+        <div id="grid_container">
             <div class="members_info">
-                <p>Name: <b class="info">Alcantara Clement</b></p>
-                <div id="img_container"></div>
+                <p><b class="member_name">Alcantara Clement</b></p>
+                <img class="members_image" alt="Clement" src="/images/programmer.png">
                 <p>Position: <b class="info">Submarine</b></p>
             </div>
             <div class="members_info">
-                <p>Name: <b class="info">Janlie Pantinople</b></p>
-                <div id="img_container"></div>
+                <p><b class="member_name">Janlie Pantinople</b></p>
+                <img class="members_image" alt="Janlie" src="/images/programmer.png">
                 <p>Position: <b class="info">McQueen 69</b></p>
             </div>
             <div class="members_info">
-                <p>Name: <b class="info">Jamiah Shane Cabigas</b></p>
-                <div id="img_container"></div>
-                <p>Position: <b class="info">Cowgirl</b></p>
+                <p><b class="member_name">Jamiah Shane Cabigas</b></p>
+                <img class="members_image" alt="Jamiah" src="/images/programmer.png">
+                <p>Position: <b class="info">???</b></p>
             </div>
             <div class="members_info">
-                <p>Name: <b class="info">Mhar Jhane William</b></p>
-                <div id="img_container"></div>
+                <p><b class="member_name">Mhar Jhane William</b></p>
+                <img class="members_image" alt="Mhar Jane" src="/images/programmer.png">
                 <p>Position: <b class="info">???</b></p>
             </div>
         </div>
