--- a/about.html
+++ b/about.html
@@ -6,14 +6,28 @@
     <link rel="stylesheet" href="/stylesheet/navbar.css">
     <link rel="stylesheet" href="/stylesheet/about.css">
     <title>About</title>
+    <script>
+        window.onload = () =>  {
+            window.addEventListener("wheel", event => {
+                const delta = Math.sign(event.deltaY);
+                let navbar = document.getElementById('navbar');
+                if (delta == 1){
+                    navbar.style.visibility = 'hidden';
+                } else {
+                    navbar.style.visibility = 'visible';
+                }
+                });
+        }
+
+    </script>
 </head>
 <body>
-    <nav>
+    <nav id="navbar">
         <div id="page_logo" onclick="window.location.href='home.html'">logo</div>
         <div id="navigation">
             <a href="home.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
+            <a href="#top">About</a>
+            <a href="#bottom">Contact</a>
         </div>
     </nav>
     <main>
