Updated Home page(wa pay js)

--- a/home_transaction.html
+++ b/home_transaction.html
@@ -11,7 +11,7 @@
     <nav>
         <div id="page_logo">Logo</div>
         <div id="navigation">
-            <a href="home.html" style="color: #7650a1;">Home</a>
+            <a href="home.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </div>
@@ -19,8 +19,8 @@
     
     <main>
         <nav id="wallet_tab">
-            <a href=""><div id="selected_tab">Wallet</div></a>
-            <a href="home_transaction.html"><div>Transaction</div></a>
+            <a href="home.html"><div>Wallet</div></a>
+            <a href=""><div id="selected_tab">Transaction</div></a>
         </nav>
         <div id="card">
             <div id="balance_visibility">
@@ -32,16 +32,12 @@
                 <span id="amount">1,000,000.00</span>
             </h1>
         </div>
-        <div id="in_out">
-            <div>
-                <img src="./images/deposit_arrow.svg">
-                Deposit
-            </div>
-            <div>
-                <img src="./images/withdraw_arrow.svg">
-                Withdraw
-            </div>
-        </div>
+        <!--<div id="other_container">
+            <div><a href="#"><img src="images/deposit.png" alt="img_here"></a></div>
+            <div><a href="#"><img src="images/withdraw.png" alt="img_here"></a></div>
+            <div><a href="#"><img src="images/list.png" alt="img_here"></a></div>
+            <div><a href="#"><img src="images/more.png" alt="img_here"></a></div>
+        </div>-->
     </main>
     
 </body>
