updated about page

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <div id="navigation">
             <a href="home.html">Home</a>
             <a href="#top">About</a>
-            <a href="#bottom">Contact</a>
+            <a href="contact.html">Contact</a>
         </div>
     </nav>
     <main>
