New login page Added login/logout icon in navbar

--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
             <a href="#top">About</a>
             <a href="contact.html">Contact</a>
         </div>
+        <a class="icon" href="index.html"><img src="/images/logout.png" alt="login"></a>
     </nav>
     <main>
         <div id="ceo_section">
