--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="stylesheet/contact.css">
 </head>
 <body>
-    <nav>
+    <nav id="navbar">
         <div id="page_logo" onclick="window.location.href='home.html'">logo</div>
         <div id="navigation">
             <a href="home.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </div>
+        <a class="icon" href="index.html"><img src="/images/logout.png" alt="login"></a>
     </nav>
     <main>
         <div class="grid_container">
