--- a/home.html
+++ b/home.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="stylesheet/home.css">
+    <link rel="stylesheet" href="stylesheet/navbar.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 <body>
-    <nav>
-        <div id="page_logo">Logo</div>
+    <nav id="navbar">
+        <div id="page_logo" onclick="window.location.href='home.html'">logo</div>
         <div id="navigation">
-            <a href="home.html" style="color: #7650a1;">Home</a>
+            <a href="home.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </div>
+        <a class="icon" href="index.html"><img src="/images/logout.png" alt="login"></a>
     </nav>
     
     <main>
