--- a/home_transaction.html
+++ b/home_transaction.html
@@ -8,13 +8,14 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 <body>
-    <nav>
-        <div id="page_logo">Logo</div>
+    <nav id="navbar">
+        <div id="page_logo" onclick="window.location.href='home.html'">logo</div>
         <div id="navigation">
             <a href="home.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </div>
+        <a class="icon" href="index.html"><img src="/images/logout.png" alt="login"></a>
     </nav>
     
     <main>
