--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 <body>
-    <nav>
+    <nav id="navbar">
         <div id="page_logo" onclick="window.location.href='home.html'">logo</div>
         <div id="navigation">
             <a href="home.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
+            <a class="icon" href="login.html"><img src="/images/login.png" alt="logout"></a>
         </div>
     </nav>
     <main>
