Updated Home(with logic na)

--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
         <div id="card">
             <div id="balance_visibility">
                 <h2>Balance</h2>
-                <button></button>
+                <button id="hide" onclick="hide_value()"></button>
             </div>
             <h1 id="balance">
                 <span id="peso_sign">&#8369;</span>
@@ -35,16 +35,16 @@
             </h1>
         </div>
         <div id="in_out">
-            <div>
+            <div id="deposit">
                 <img src="./images/deposit_arrow.svg">
                 Deposit
             </div>
-            <div>
+            <div id="withdraw">
                 <img src="./images/withdraw_arrow.svg">
                 Withdraw
             </div>
         </div>
     </main>
-    
+    <script src="./scripts/home.js"></script>
 </body>
 </html>
