--- a/home_transaction.html
+++ b/home_transaction.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="stylesheet/home.css">
+    <link rel="stylesheet" href="stylesheet/home_transaction.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 <body>
@@ -23,23 +23,21 @@
             <a href="home.html"><div>Wallet</div></a>
             <a href=""><div id="selected_tab">Transaction</div></a>
         </nav>
-        <div id="card">
-            <div id="balance_visibility">
-                <h2>Balance</h2>
-                <button></button>
-            </div>
-            <h1 id="balance">
-                <span id="peso_sign">&#8369;</span>
-                <span id="amount">1,000,000.00</span>
-            </h1>
+        <div id="table">
+            <table id="transaction">
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Balance</th>
+                        <th>Type</th>
+                        <th>Amount</th>
+                    </tr>
+                </thead>
+                <tbody id="table_data">
+                </tbody>
+            </table>            
         </div>
-        <!--<div id="other_container">
-            <div><a href="#"><img src="images/deposit.png" alt="img_here"></a></div>
-            <div><a href="#"><img src="images/withdraw.png" alt="img_here"></a></div>
-            <div><a href="#"><img src="images/list.png" alt="img_here"></a></div>
-            <div><a href="#"><img src="images/more.png" alt="img_here"></a></div>
-        </div>-->
     </main>
-    
+    <script src="./scripts/home_transaction.js"></script>
 </body>
 </html>
