--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <nav id="navbar">
-        <div id="page_logo" onclick="window.location.href='home.html'">logo</div>
+        <div id="page_logo" onclick="window.location.href='home.html'"></div>
         <div id="navigation">
             <a href="home.html">Home</a>
             <a href="#top">About</a>
