--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <div id="page_logo">Logo</div>
+        <div id="page_logo"></div>
         <div id="navigation">
             <a href="home.html" style="color: #7650a1;">Home</a>
             <a href="about.html">About</a>
