updated about page

--- a/about.html
+++ b/about.html
@@ -6,20 +6,7 @@
     <link rel="stylesheet" href="/stylesheet/navbar.css">
     <link rel="stylesheet" href="/stylesheet/about.css">
     <title>About</title>
-    <!-- <script>
-        window.onload = () =>  {
-            window.addEventListener("wheel", event => {
-                const delta = Math.sign(event.deltaY);
-                let navbar = document.getElementById('navbar');
-                if (delta == 1){
-                    navbar.style.visibility = 'hidden';
-                } else {
-                    navbar.style.visibility = 'visible';
-                }
-                });
-        }
 
-    </script> -->
 </head>
 <body>
     <nav id="navbar">
@@ -31,49 +18,74 @@
         </div>
         <a class="icon" href="index.html"><img src="/images/logout.png" alt="login"></a>
     </nav>
+
     <main>
-        <div class="ceo_section">
-            <img class="ceo_image" src="/images/programmer.png" alt="CEO Image">
-            <div class="ceo_info_container">
-                <h2 class="ceo_name">Bryan Antier</h2>
-                <div class="ceo_info">
-                    <p>Position: <b class="info">Helicopter</b></p>
+        <div class="member_section">
+            <img class="member_image" src="/images/clement.jpg" alt="member Image">
+            <div class="member_info_container">
+                <h2 class="member_name">Clement Alcantara</h2>
+                <div class="member_info">
+                    <p>Age: <b class="info">21</b></p>
+                    <p>Email: <b class="info"><a href="http://tinyurl.com/sendGmailMessage">alcantaraclement@gmail.com</a></b></p>
+                    <p>Mobile No. : <b class="info">09881000081</b></p>
+                    <p>Goal: <b class="info">When I grow up I want to be a dumbtruck.</b></p>
+                    <p>Favorite Qoute: <b class="info">"Just create"</b></p>
                 </div>
             </div>
         </div>
-        <div class="ceo_section">
-            <img class="ceo_image" src="/images/programmer.png" alt="CEO Image">
-            <div class="ceo_info_container">
-                <h2 class="ceo_name">Clement Alcantara</h2>
-                <div class="ceo_info">
-                    <p>Position: <b class="info">Submarine</b></p>
+
+        <div class="member_section">
+            <img class="member_image" src="/images/programmer.png" alt="member Image">
+            <div class="member_info_container">
+                <h2 class="member_name">Bryan Antier</h2>
+                <div class="member_info">
+                    <p>Age: <b class="info">19</b></p>
+                    <p>Email: <b class="info"><a href="http://tinyurl.com/bryanantier">bryanantier7@gmail.com</a></b></p>
+                    <p>Mobile No. : <b class="info">09123456789</b></p>
+                    <p>Goal: <b class="info">When I grow up I want to be a dumbtruck.</b></p>
+                    <p>Favorite Qoute: <b class="info">"Evil for Evil" - somebody</b></p>
                 </div>
             </div>
         </div>
-        <div class="ceo_section">
-            <img class="ceo_image" src="/images/programmer.png" alt="CEO Image">
-            <div class="ceo_info_container">
-                <h2 class="ceo_name">Janlie Pantinople</h2>
-                <div class="ceo_info">
-                    <p>Position: <b class="info">McQueen 69</b></p>
+
+        <div class="member_section">
+            <img class="member_image" src="/images/jamaiah.jpg" alt="member Image">
+            <div class="member_info_container">
+                <h2 class="member_name">Jamaiah Cabigas</h2>
+                <div class="member_info">
+                    <p>Age: <b class="info">19</b></p>
+                    <p>Email: <b class="info"><a href="http://tinyurl.com/jamaiahshane">jamaiahshane@gmail.com</a></b></p>
+                    <p>Mobile No. : <b class="info">09059645422</b></p>
+                    <p>Goal: <b class="info">Graduate</b></p>
+                    <p>Favorite Qoute: <b class="info">"Don't wait for opportunity. Create it."</b></p>
                 </div>
             </div>
         </div>
-        <div class="ceo_section">
-            <img class="ceo_image" src="/images/programmer.png" alt="CEO Image">
-            <div class="ceo_info_container">
-                <h2 class="ceo_name">Jamaiah Cabigas</h2>
-                <div class="ceo_info">
-                    <p>Position: <b class="info">Something</b></p>
+
+        <div class="member_section">
+            <img class="member_image" src="/images/janlie.jpg" alt="member Image">
+            <div class="member_info_container">
+                <h2 class="member_name">Janlie Pantinople</h2>
+                <div class="member_info">
+                    <p>Age: <b class="info">21</b></p>
+                    <p>Email: <b class="info"><a href="http://tinyurl.com/sendGmailMessage">alcantaraclement@gmail.com</a></b></p>
+                    <p>Mobile No. : <b class="info">09123456789</b></p>
+                    <p>Goal: <b class="info">When I grow up I want to be a dumbtruck.</b></p>
+                    <p>Favorite Qoute: <b class="info">"Evil for Evil" - somebody</b></p>
                 </div>
             </div>
         </div>
-        <div class="ceo_section">
-            <img class="ceo_image" src="/images/programmer.png" alt="CEO Image">
-            <div class="ceo_info_container">
-                <h2 class="ceo_name">Mhar Jane William</h2>
-                <div class="ceo_info">
-                    <p>Position: <b class="info">Something</b></p>
+
+        <div class="member_section">
+            <img class="member_image" src="/images/programmer.png" alt="member Image">
+            <div class="member_info_container">
+                <h2 class="member_name">Mhar Jane William</h2>
+                <div class="member_info">
+                    <p>Age: <b class="info">21</b></p>
+                    <p>Email: <b class="info"><a href="http://tinyurl.com/sendGmailMessage">alcantaraclement@gmail.com</a></b></p>
+                    <p>Mobile No. : <b class="info">09123456789</b></p>
+                    <p>Goal: <b class="info">When I grow up I want to be a dumbtruck.</b></p>
+                    <p>Favorite Qoute: <b class="info">"Evil for Evil" - somebody</b></p>
                 </div>
             </div>
         </div>        
