--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
     </nav>
     <main>
         <div id="login_container">
-            <img class="center_item" id="logo" src="images/genshin.jpg" alt="logo">
+            <img class="center_item" id="logo" src="images/logo-01.png" alt="logo">
             <h1 class="center_item">Welcome Back</h1>
             <form action="" method="POST">
                 <input class="userinput block_item" type="email" name="email" placeholder="Enter email" required autofocus>
@@ -34,7 +34,7 @@
             <button id="swap_signup" class="btn">Sign-up</button>
         </div>
         <div id="signup_container">
-            <img class="center_item" id="logo" src="images/genshin.jpg" alt="logo">
+            <img class="center_item" id="logo" src="images/logo-01.png" alt="logo">
             <h1 class="center_item">Please fill up the form</h1>
             <form action="" method="POST">
                 <!-- <label for="first_name">Name:</label> -->
