--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
     <main>
         <div id="text_div">
-            <h1 id="title">_</h1>
+            <h1 id="title">Welcome to Bank Saving</h1>
             <p id="description">Are you prepared to take charge of your financial destiny and surpass your previous savings goals? There is no need to look any further than Bank Saving, your ideal ally on the road to financial success.</p>
             <a href="home.html"><button>Continue</button></a>
         </div>
