Boss Bryan nalang kulang nga info

--- a/about.html
+++ b/about.html
@@ -68,24 +68,24 @@
                 <h2 class="member_name">Janlie Pantinople</h2>
                 <div class="member_info">
                     <p>Age: <b class="info">21</b></p>
-                    <p>Email: <b class="info"><a href="http://tinyurl.com/sendGmailMessage">alcantaraclement@gmail.com</a></b></p>
-                    <p>Mobile No. : <b class="info">09123456789</b></p>
-                    <p>Goal: <b class="info">When I grow up I want to be a dumbtruck.</b></p>
-                    <p>Favorite Qoute: <b class="info">"Evil for Evil" - somebody</b></p>
+                    <p>Email: <b class="info"><a href="http://tinyurl.com/sendGmailMessage">dandanpantinople@gmail.com</a></b></p>
+                    <p>Mobile No. : <b class="info">09935112712</b></p>
+                    <p>Goal: <b class="info">Billionaire </b></p>
+                    <p>Favorite Qoute: <b class="info">If you can't make money, print them.</b></p>
                 </div>
             </div>
         </div>
 
         <div class="member_section">
-            <img class="member_image" src="/images/programmer.png" alt="member Image">
+            <img class="member_image" src="/images/Mharjane.jpg" alt="member Image">
             <div class="member_info_container">
                 <h2 class="member_name">Mhar Jane William</h2>
                 <div class="member_info">
-                    <p>Age: <b class="info">21</b></p>
-                    <p>Email: <b class="info"><a href="http://tinyurl.com/sendGmailMessage">alcantaraclement@gmail.com</a></b></p>
-                    <p>Mobile No. : <b class="info">09123456789</b></p>
-                    <p>Goal: <b class="info">When I grow up I want to be a dumbtruck.</b></p>
-                    <p>Favorite Qoute: <b class="info">"Evil for Evil" - somebody</b></p>
+                    <p>Age: <b class="info">19</b></p>
+                    <p>Email: <b class="info"><a href="http://tinyurl.com/sendGmailMessage">williamjhaen@gmail.com</a></b></p>
+                    <p>Mobile No. : <b class="info">09311195340</b></p>
+                    <p>Goal: <b class="info"></b>Graduate</p>
+                    <p>Favorite Qoute: <b class="info">Live the short life well</b></p>
                 </div>
             </div>
         </div>        
